# lcli

./: .gitignore  Cargo.toml  LICENSE.md  LICENSE.txt  README.md
src/: cli.rs  main.rs
src/commands/: about.rs  calc.rs  file.rs  list.rs  ls.rs  mod.rs  quote.rs  spam.rs  time.rs
