[package]
name = "lcli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
owo-colors = { version = "4.2.1" }
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = { version = "0.27" }
tabled = { version = "0.20.0" }
chrono = { version = "0.4.41" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
winreg = "0.55.0"
dirs = "6.0.0"
