[package]
name = "lcli"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["LHagfoss <lucash.1707@gmail.com>"]
description = "A simple but effective internet speed test CLI tool built with Rust"
homepage = "https://lhagfoss.com"
repository = "https://github.com/LHagfoss/lcli"

[[bin]]
name = "lcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde_json = { version = "1.0.140" }
owo-colors = { version = "4.2.1" }
strum = { version = "0.27.1", features = ["derive"] }
tabled = { version = "0.20.0" }
chrono = { version = "0.4.41" }
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
console = "0.15.11"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
